syntax = "proto3";
package provider.pb;

service ProviderService {
  rpc Ping(PingReq) returns (PingResp){}

	rpc Store(stream StoreReq) returns (StoreResp){}

	rpc Retrieve(RetrieveReq) returns (stream RetrieveResp){}

	rpc GetFragment(GetFragmentReq) returns (GetFragmentResp){}
}


message PingReq {
}

message PingResp{
}

message StoreReq {
  bytes data=1;
	bytes auth = 2;
	string ticket = 3;
	string key = 4;
	uint64 fileSize=5;
	sint64 timestamp=6;
}

message StoreResp{
	bool success = 1;
}

message RetrieveReq {
	bytes auth = 1;
	string ticket = 2;
	string key = 3;
	uint64 fileSize=4;
	sint64 timestamp=5;
}

message RetrieveResp {
   bytes data=1;
}

message GetFragmentReq {
  bytes auth = 1;
	string key = 2;
	int32 size = 3;
	bytes positions = 4;
	sint64 timestamp=5;
}

message GetFragmentResp {
   repeated bytes data=1;
}
